--- a/Gallag/Gallag.vcxproj
+++ b/Gallag/Gallag.vcxproj
@@ -148,7 +148,7 @@
   <ItemGroup>
     <ClCompile Include="draw.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="screen.cpp" />
+    <ClCompile Include="startcreen.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
