--- a/Gallag/Gallag.vcxproj.filters
+++ b/Gallag/Gallag.vcxproj.filters
@@ -38,7 +38,7 @@
     <ClCompile Include="draw.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="screen.cpp">
+    <ClCompile Include="startcreen.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
