--- a/Gallag/Gallag.vcxproj.filters
+++ b/Gallag/Gallag.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClCompile Include="stagesize.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="gotoxy.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
