--- a/Gallag/Gallag.vcxproj
+++ b/Gallag/Gallag.vcxproj
@@ -139,19 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Bullet.h" />
-    <ClInclude Include="gamescene.h" />
-    <ClInclude Include="pch.h" />
-    <ClInclude Include="player.h" />
-    <ClInclude Include="unit.h" />
+    <ClInclude Include="rocket.h" />
     <ClInclude Include="발사체.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Bullet.cpp" />
-    <ClCompile Include="gamescene.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="pch.cpp" />
     <ClCompile Include="player.cpp" />
+    <ClCompile Include="rocket.cpp" />
     <ClCompile Include="unit.cpp" />
     <ClCompile Include="발사체.cpp" />
   </ItemGroup>
