--- a/Gallag/Gallag.vcxproj.filters
+++ b/Gallag/Gallag.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClCompile Include="map.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="crash.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
