--- a/Gallag/Gallag.vcxproj.filters
+++ b/Gallag/Gallag.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="TimeDelay.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Score.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -69,6 +72,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TimeDelay.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Score.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
