move.cpp 에서 main 내에있는 posx,posy를 직접적으로 받아 조정하게끔 변경 ( posx,posy 변수를 crash와 fire에 적용하기 위함)

--- a/Gallag/Gallag.vcxproj
+++ b/Gallag/Gallag.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="Util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="enemyspawn.cpp" />
     <ClCompile Include="fire.cpp" />
     <ClCompile Include="logo.cpp" />
     <ClCompile Include="gotoxy.cpp" />
