--- a/Gallag/Gallag.vcxproj.filters
+++ b/Gallag/Gallag.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="rocket.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="적발사체.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="발사체.cpp">
@@ -36,6 +39,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="rocket.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="적발사체.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
