--- a/Gallag/Gallag.vcxproj
+++ b/Gallag/Gallag.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="map.cpp" />
     <ClCompile Include="move.cpp" />
     <ClCompile Include="print.cpp" />
+    <ClCompile Include="random.cpp" />
     <ClCompile Include="Score.cpp" />
     <ClCompile Include="selectstartmenu.cpp" />
     <ClCompile Include="stagesize.cpp" />
