적기가 랜덤이 아닌 고정

--- a/Gallag/Gallag.vcxproj
+++ b/Gallag/Gallag.vcxproj
@@ -139,16 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="rocket.h" />
-    <ClInclude Include="발사체.h" />
     <ClInclude Include="적발사체.h" />
+    <ClInclude Include="cursor.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="player.cpp" />
-    <ClCompile Include="rocket.cpp" />
     <ClCompile Include="unit.cpp" />
-    <ClCompile Include="발사체.cpp" />
     <ClCompile Include="적발사체.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
