--- a/Gallag/Gallag.vcxproj
+++ b/Gallag/Gallag.vcxproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Crash.cpp" />
+    <ClCompile Include="crush.cpp" />
     <ClCompile Include="enemyspawn.cpp" />
     <ClCompile Include="fire.cpp" />
     <ClCompile Include="logo.cpp" />
@@ -165,10 +166,6 @@
     <ClCompile Include="startcreen.cpp" />
     <ClCompile Include="startscreen_cursor.cpp" />
     <ClCompile Include="TimeDelay.cpp" />
-    <ClCompile Include="EnemyUnit.cpp" />
-    <ClCompile Include="EnemyStats.cpp" />
-    <ClCompile Include="EnemyMove.cpp" />
-    <ClCompile Include="EnemyCreate.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
