--- a/Gallag/Gallag.vcxproj
+++ b/Gallag/Gallag.vcxproj
@@ -149,7 +149,6 @@
     <ClInclude Include="cursor.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Crash.cpp" />
     <ClCompile Include="crush.cpp" />
     <ClCompile Include="enemyspawn.cpp" />
     <ClCompile Include="fire.cpp" />
@@ -161,6 +160,7 @@
     <ClCompile Include="print.cpp" />
     <ClCompile Include="random.cpp" />
     <ClCompile Include="Score.cpp" />
+    <ClCompile Include="Scorecount.cpp" />
     <ClCompile Include="selectstartmenu.cpp" />
     <ClCompile Include="stagesize.cpp" />
     <ClCompile Include="startcreen.cpp" />
